[gradle] Migrate to Gradle